# googlecl

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  INSTALL.txt  LICENSE  MANIFEST.in  Makefile  README.md  README.packaging-new-releases  README.rst  changelog  client_secret.json  goals.txt  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  upload-diffs.py  vimrc
.github/: FUNDING.yml
.github/workflows/: pythonpackage.yml
docs/: INSTALL.md  Makefile  Makefile.txt  README.new-usage.md  README.txt  __init__.html  authentication.html  base.html  client.html  conf.py  configuration.rst  data.html  date.html  date_test.html  debug_util.html  development.rst  docs.html  google.html  index.rst  install.rst  installation.rst  make.bat  output.html  parser.html  service.html  stuff.rst  usage.rst  win_setup.html
docs/src/: debug_util.html  google.html  win_setup.html
docs/src/googlecl/: __init__.html  authentication.html  base.html  client.html  service.html
docs/src/googlecl/blogger/: __init__.html  service.html
docs/src/googlecl/calendar/: __init__.html  date.html  date_test.html  service.html
docs/src/googlecl/config/: __init__.html  parser.html
docs/src/googlecl/contacts/: __init__.html  base.html  client.html  service.html
docs/src/googlecl/discovery/: __init__.html  authentication.html  data.html  docs.html  output.html
docs/src/googlecl/docs/: __init__.html  base.html  client.html  service.html
docs/src/googlecl/finance/: __init__.html  service.html
docs/src/googlecl/picasa/: __init__.html  service.html
docs/src/googlecl/youtube/: __init__.html  service.html
google_cl/: cli.py
google_cl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
man/.svn/: all-wcprops  entries
man/.svn/text-base/: examples.help2man.svn-base  google.1.svn-base
src/: __init__.py  authorize.py  cli.py  debug_util.py  gdata-swap.sh  google  google.py  test.sh  win_setup.py
src/.svn/: all-wcprops  entries
src/.svn/text-base/: setpath.sh.svn-base
src/google_cl/: __init__.py  exceptions.py
src/google_cl/main/: __init__.py  application.py  auth.py  cli.py
src/google_cl/services/: __init__.py  base.py  calendar.py  drive.py  gmail.py
src/googlecl/: __init__.py  authenticate.py  authentication.py  base.py  client.py  service.py
src/googlecl/.svn/: all-wcprops  entries
src/googlecl/.svn/text-base/: __init__.py.svn-base  authentication.py.svn-base  base.py.svn-base  client.py.svn-base  service.py.svn-base
src/googlecl/blogger/: __init__.py  service.py
src/googlecl/blogger/.svn/: all-wcprops  entries
src/googlecl/blogger/.svn/text-base/: __init__.py.svn-base
src/googlecl/calendar/: __init__.py  date.py
src/googlecl/calendar/.svn/text-base/: date_test.py.svn-base
src/googlecl/config/: __init__.py  parser.py
src/googlecl/config/.svn/: all-wcprops  entries
src/googlecl/config/.svn/text-base/: __init__.py.svn-base
src/googlecl/contacts/: __init__.py  base.py  client.py  service.py
src/googlecl/contacts/.svn/: all-wcprops  entries
src/googlecl/contacts/.svn/text-base/: client.py.svn-base  service.py.svn-base
src/googlecl/discovery/: __init__.py  authentication.py  data.py  docs.py  output.py
src/googlecl/discovery/.svn/: all-wcprops  entries
src/googlecl/discovery/.svn/text-base/: __init__.py.svn-base  data.py.svn-base  output.py.svn-base
src/googlecl/docs/: __init__.py  base.py  client.py  service.py
src/googlecl/docs/.svn/: all-wcprops  entries
src/googlecl/docs/.svn/text-base/: __init__.py.svn-base
src/googlecl/finance/: __init__.py  service.py
src/googlecl/finance/.svn/: all-wcprops  entries
src/googlecl/gcalendar/: __init__.py  date.py  date_test.py  service.py
src/googlecl/gcalendar/.svn/: all-wcprops  entries
src/googlecl/gcalendar/.svn/text-base/: service.py.svn-base
src/googlecl/picasa/: __init__.py  service.py
src/googlecl/picasa/.svn/: all-wcprops  entries
src/googlecl/youtube/: __init__.py  service.py
src/googlecl/youtube/.svn/: all-wcprops  entries
src/googlecl/youtube/.svn/text-base/: __init__.py.svn-base  service.py.svn-base
tests/: test_google_cl.py
