[metadata]
name = GoogleCL
version = attr: google_cl.__version__
description = the modular source code checker: pep8 pyflakes and co
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/vinitkumar/googlecl
author = Vinit kumar
author_email = mail@vinitkumar.me
maintainer = Vinit Kumar
maintainer_email = mail@vinitkumar.me
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:
package_dir =
    =src
# We document the reasoning for using ranges here:
# http://flake8.pycqa.org/en/latest/faq.html#why-does-flake8-use-ranges-for-its-dependencies
# And in which releases we will update those ranges here:
# http://flake8.pycqa.org/en/latest/internal/releases.html#releasing-flake8
install_requires =
    importlib-metadata<4.3;python_version<"3.8"
python_requires = >=3.6.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    google = google_cl.main.cli:main

[bdist_wheel]
universal = 1

[mypy-tests.*]
disallow_untyped_defs = false



[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
